--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Drive API Quickstart</title>
     <meta charset="utf-8" />
     <script src="https://apis.google.com/js/api.js"></script>
-    <!-- <script src="/page.js"></script> -->
+    <script src="/page.js"></script>
     <script src="/google.js"></script>
   </head>
   <body>
