--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <title>Drive API Quickstart</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="https://apis.google.com/js/api.js"></script>
-    <script src="/page.js"></script>
-    <script src="/google.js"></script>
+    <script src="/js/page.js"></script>
+    <script src="/js/google.js"></script>
   </head>
   <body>
     <header>
-      <img src="./DBR_Logo-Large_Light.png">
+      <img src="/images/DBR_Logo-Large_Light.png">
         <nav>
           <ul>
               <li><a href="?#browse" class="stop-page-load-transition">Browse</a></li>
