--- a/index.html
+++ b/index.html
@@ -21,18 +21,46 @@
       </nav>
     </header>
     <main>
+
+
       <div id="home" class="sub-page">
-        Home
+        <h2>Home</h2>
+        <p>
+          Welcome to you Digital Recipe Book.
+          Please use the menu above to navigate to your prefered page or resource.
+        </p>
       </div>
+
+
       <div id="browse" class="sub-page">
-        Browse
+        <h2>Browse</h2>
       </div>
+
+
       <div id="create" class="sub-page">
-        Create
+        <h2>Create</h2>
       </div>
+
+
+      <div id="view" class="sub-page">
+        <h2>View</h2>
+      </div>
+
+
+      <div id="edit" class="sub-page">
+        <h2>Edit</h2>
+      </div>
+
+      <div id="search" class="sub-page">
+        <h2>Search Results</h2>
+      </div>
+
+
       <div id="settings" class="sub-page">
-        Settings
+        <h2>Settings</h2>
       </div>
+
+
     </main>
   </body>
 </html>
