--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://apis.google.com/js/api.js"></script>
     <script src="/js/page.js"></script>
     <script src="/js/google.js"></script>
+    <script src="/js/search.js"></script>
   </head>
   <body>
     <header>
